src/log/build_2025-05-30_18-21-57/behaviour_planner_pkg/stderr.log
  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/static_obstacle.py", line 116
    StaticObstacleCondition("static_obstacle_is_speed_bump", bt_instance, target_static_obstacle_conditions=[
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/traffic_sign.py", line 217
    SignCondition("sign_is_no_u_turn", bt_instance, target_sign_conditions=[
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

